public/static/style.css
html, body, main {
    height: 100%;
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

main, footer {
    font-family: "Nunito Sans", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
    font-weight: 500;
    font-size: 25px;
}

a {
    color: inherit;
}

main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 25px;

    padding: 40px;

    background-color: #272737;

    > * {
        padding: 35px;
        max-width: 99%;

        border-radius: 18px;
        background-color: #3c3c57;
        box-shadow: 0px 0px 50px -15px #0000006b;
    }

    > #function {
        position: relative;
        display: flex;
        flex-direction: column;
        gap: 15px;
        padding-bottom: 10px;

        > #function-return {
            display: flex;
            flex-direction: row;
            flex-wrap: wrap;
            gap: 4px;

            margin-bottom: -20px;
        }

        > #name-wrapper {
            display: flex;
            flex-direction: row;
            align-items: center;
            gap: 20px;

            > #function-name {
                display: flex;
                flex-direction: row;
                flex-wrap: wrap;

                font-size: 80px;
                text-decoration: none;
            }

            > #copy-button {
                background-image: url("copy.png");
                width: 32px;
                height: 32px;
                background-size: cover;
                cursor: pointer;
            }
        }

        > #function-params {
            display: flex;
            flex-direction: row;
            flex-wrap: wrap;
            gap: 10px;

            > .param {
                border: 2px solid #31314b;
                background-color: #464674;
                border-radius: 4px;
                padding: 4px 8px;
            }
        }

        > #function-number {
            width: 100%;

            text-align: center;

            font-size: 15px;
            color: #ffffff;
        }
    }

    > #addresses {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        gap: 20px;

        > .address {
            display: flex;
            flex-direction: row;
            padding: 7px;
            gap: 5px;
            flex: 1 1 auto;

            border-width: 2px;
            border-style: solid;
            border-radius: 10px;

            color: #ffffff;

            > .address-platform {
                font-size: 13px;
            }

            > .address-offset {
                font-family: "JetBrains Mono", monospace;
                font-weight: 400;
                font-size: 20px;
            }
        }
    }
}

footer {
    position: fixed;
    bottom: 20px;
    left: 50%;
    translate: -50% 0px;

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;

    > #footer-content {
        color: #ffffff;
        text-align: center;
    }

    > a > img {
        width: 30px;
        filter: invert(1);
    }
}

@media (max-width: 750px) {
    main, footer {
        font-size: 15px;
    }

    main > #function{
        > #function-return {
            margin-bottom: -5px;
        }

        #name-wrapper > #function-name {
            font-size: 30px;
        }
    }
}

.type-generic { color: #9e6ad4; }
.type-class { color: #f5dd9f; }
.function-name { color: #6a80d8; }
.namespace-name { color: #f5c99f; }
.white { color: #ffffff; }

.win { background-color: hsla(240, 79%, 53%, 0.467); border-color: hsla(240, 79%, 53%, 0.467); }
.m1 { background-color: hsla(58, 79%, 53%, 0.467); border-color: hsla(58, 79%, 53%, 0.467); }
.imac { background-color: hsla(39, 79%, 53%, 0.467); border-color: hsla(39, 79%, 53%, 0.467); }
.ios { background-color: hsla(118, 79%, 53%, 0.467); border-color: hsla(118, 79%, 53%, 0.467); }
.android32 { background-color: hsla(318, 79%, 53%, 0.467); border-color: hsla(318, 79%, 53%, 0.467); }
.android64 { background-color: hsla(295, 79%, 53%, 0.467); border-color: hsla(295, 79%, 53%, 0.467); }


@keyframes bump-on-copy {
    from {
        translate: 0px 0px;
    }

    50% {
        translate: 0px -10px;
    }

    to {
        translate: 0px 0px;
    }
}

